# ms_snn

./: .gitignore  LICENSE  dataset.py  infer.py  net.py  readme.md  setup.py  test.py  train.py
lif_model/: ATan.cu  __init__.py  atan.py  lif_node.py  setup.py  voting_layer.py
ms_snn/: __init__.py
ms_snn/layer/: __init__.py  base_node.py  lif_node.py  voting_layer.py
ms_snn/sorrogate/: __init__.py  atan.py  base.py  leaky_k_relu.py  piecewise_quadratic_leaky_relu.py  sigmoid.py
ms_snn/sorrogate/cuda/: ATan.cu  Heaviside.cu  PiecewiseQuadraticLeakyReLU.cu  cuda_common.h
ms_snn/surrogate/: __init__.py  atan.py  base.py  leaky_k_relu.py  piecewise_leaky_relu.py  sigmoid.py
ms_snn/surrogate/cuda/: ATan.cu  CMakeLists.txt  LeakyKReLU.cu  PiecewiseLeakyReLU.cu  Sigmoid.cu  cuda_common.h  custom_aot_extra.h
